methods.returning.MethodsReturning.scala.error
Erreur de compilation :
MethodsReturning:2: error: type mismatch;
 found   : Unit
 required: Boolean
  for (a <- 0 to 5){
         ^